--- a/resolve-ai/package.json
+++ b/resolve-ai/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "alith": "^0.10.4",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "ethers": "^6.15.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
